deployments/manifests.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP
spec:
  selector:
    matchLabels:
      app: $APP
  replicas: $REPLICAS
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: $APP
    spec:
      containers:
        - name: $APP
          image: $IMAGE
          resources:
            limits:
              cpu: "0.4"
            requests:
              cpu: "0.2"
          ports:
            - containerPort: $PORT
          imagePullPolicy: Always
      imagePullSecrets:
        - name: $IMAGE_SECRET
---
apiVersion: v1
kind: Service
metadata:
  name: $APP
spec:
  ports:
    - port: $PORT
      targetPort: $PORT
  selector:
    app: $APP
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $REPO.$ENV.carrott.com
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - $REPO.$ENV.carrott.com
      secretName: tls-$REPO.$ENV.carrott.com
  rules:
    - host: $REPO.$ENV.carrott.com
      http:
        paths:
          - path: /
            backend:
              serviceName: $APP
              servicePort: $PORT
